--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,3 +1,10 @@
-<div class="container">    
-    'Enthusiasm to Learn' defines me in a nutshell. Aiming towards the goal and keeping continuous effort to achieve the same is what I believe. I am girl who puts each step thinking about giving back to the society, by sharing the knowledge with everyone.
+<div class="container">
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            'Enthusiasm to Learn' defines me in a nutshell. Aiming towards the goal and keeping continuous effort to
+            achieve the same is what I believe. I am girl who puts each step thinking about giving back to the society,
+            by sharing the knowledge with everyone.
+        </div>
+    </div>
 </div>
