--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,10 +1,33 @@
 <div class="container">
     <div class="row">
         <div class="col-1"></div>
-        <div class="col-10">
-            'Enthusiasm to Learn' defines me in a nutshell. Aiming towards the goal and keeping continuous effort to
-            achieve the same is what I believe. I am girl who puts each step thinking about giving back to the society,
-            by sharing the knowledge with everyone.
+        <div class="col-10 bio">
+            <strong>'Enthusiasm to Learn'</strong> defines me in a nutshell. Aiming towards the goal and keeping
+            continuous effort to achieve the same is what I believe. I am a girl who put each step thinking about
+            giving back to the society, by sharing the knowledge with everyone. I am a person with a bag full of
+            hardwork and determination to fulfill my responsibilities.
+            Working as a <strong>Software Engineer</strong>, I have a keen interest in working on new technologies.
+            Being a facilitator of <strong>#IamRemarkable</strong> workshop, I always give my best to motivate my
+            surrounding. Despite busy schedules, I never misses any chance to travel and eat.
+            <br><br>
+            I belong to a middle class family from <strong>Ballia, Uttar Pradesh</strong> and had done my schooling from
+            Uttar Pradesh. Like all other students, I had a dream to go to IIT, but destiny had some other plans for me
+            and I landed in <strong>Lovely Professional University</strong> to pursue my dream of becoming an engineer.
+            The 4 years of my college life was full of fun, learning, hosting workshops/sessions on behalf of
+            <strong>GDG Jalandhar</strong> and ended with <strong>One-year Internship</strong> with
+            <strong>iBHubs</strong>.
+            <strong>GDG Jalandhar</strong> has played the most important role in my life, it helped
+            me in enhancing my technical stack along with making me comfortable in communicating with others. I started
+            my journey as an attendee in <strong>DevFest Jalandhar 2015</strong> and it gradually took me to the
+            position of <strong>Co-Organizer</strong> along with the title of <strong>WTM Ambassador</strong>.
+            <br><br>
+            After spending almost an year in southern part of India, I chose to work in the National Capital of India,
+            Delhi and got an offer from <strong>Edfora Infotech</strong> to work as a <strong>SDE</strong> for the
+            product <strong>myPAT</strong> <mark>(then)</mark> and
+            <strong> Watson</strong><mark>(now)</mark>.
+            <br><br>
+            I have sucessfully conducted <strong>150+</strong> workshops on behalf of <strong>GDG Jalandhar</strong> and
+            actively contributing for the betterment of the community since last 4 years.
         </div>
     </div>
 </div>
