--- a/src/app/bio/bio.component.css
+++ b/src/app/bio/bio.component.css
@@ -1,8 +1,8 @@
 .bio {
     text-align: justify;
-    padding: 25px;
-    margin: 15px;
+    padding: 35px;
     font-family: cursive;
+    font-size: 20px;
 }
 
 strong {
