Updated the bio

--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -2,21 +2,33 @@
     <div class="row">
         <div class="col-12 bio">
             <strong>'Enthusiasm to Learn'</strong> defines me in a nutshell. Aiming towards a goal and making
-            continuous effort to achieve it is what I believe. I am a girl who puts thinking into each step towards giving back to the community by sharing the knowledge with everyone who is in the quest for it. Hardwork and Determination are the two values that I hold close to my heart.
+            continuous effort to achieve it is what I believe. I am a girl who puts thinking into each step towards
+            giving back to the community by sharing the knowledge with everyone who is in the quest for it. Hardwork and
+            Determination are the two values that I hold close to my heart.
             Working as a <strong>Software Engineer</strong>, I have keen interest in working on new technologies.
-            Being the facilitator of the <strong>#IamRemarkable</strong> initiative by <strong>Google</strong>, I always give my best to motivate my people around me. Despite busy schedules, I never miss an opportunity to travel and eat.
+            Being the facilitator of the <strong>#IamRemarkable</strong> initiative by <strong>Google</strong>, I always
+            give my best to motivate my people around me. Empowering women and having gender equity has always been my
+            motive and this led me to be the <b>Chapter Lead</b> for
+            <b> Malikah</b> where I will be helping women out in many
+            ways.
+            Despite busy schedules, I never miss an opportunity to travel
+            and eat.
             <br><br>
-            I belong to a middle class family from <strong>Ballia, Uttar Pradesh</strong> and have done my schooling from
+            I belong to a middle class family from <strong>Ballia, Uttar Pradesh</strong> and have done my schooling
+            from
             Uttar Pradesh. Like all other students, I had a dream to go to IIT, but destiny had other plans for me
             and I landed in <strong>Lovely Professional University</strong> to pursue my dream of becoming an engineer.
             The four years of my college life was full of fun, learning, hosting workshops/sessions on behalf of
-            <strong>GDG Jalandhar</strong> and ended with a<strong>one-year Internship</strong> with
+            <strong>GDG Jalandhar</strong> and ended with a <strong>one-year Internship</strong> with
             <strong>iBHubs</strong> alongwith my fourth year of B.Tech.
             <strong>GDG Jalandhar</strong> has played the most important role in my life. It helped
-            me in enhancing my technical stack know-how along with making me comfortable and confident in communicating with others. I started
-            my journey as an attendee in <strong>DevFest Jalandhar 2015</strong> and it gradually took me to being a <strong>Co-Organizer</strong> and <strong>Women Techmakers Ambassador</strong> of the chapter.
+            me in enhancing my technical stack know-how along with making me comfortable and confident in communicating
+            with others. I started
+            my journey as an attendee in <strong>DevFest Jalandhar 2015</strong> and it gradually took me to being an
+            <strong>Organizer</strong> and <strong>Women Techmakers Ambassador</strong> of the chapter.
             <br><br>
-            After spending almost an year in the southern part of India, I chose to work in the National Capital, Delhi and got an offer from <strong>Edfora Infotech</strong> to work as a <strong>SDE</strong> for the
+            After spending almost an year in the southern part of India, I chose to work in the National Capital, Delhi
+            and got an offer from <strong>Edfora Infotech</strong> to work as a <strong>SDE</strong> for the
             product <strong>myPAT</strong> (<mark>then</mark>) and
             <strong> Watson</strong> (<mark>now</mark>).
             <br><br>
